--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robofriends",
+  "homepage": "https://xRomasik.github.io/RoboFriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,13 +10,16 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
